hapi-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  selfLink: /api/v1/namespaces/fhir/services/hapi
  resourceVersion: '48980638'
  name: hapi
  uid: a53ae27f-7c88-40b7-8e66-90a58df00f4e
  creationTimestamp: '2021-11-03T16:49:06Z'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2021-11-03T16:49:06Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:deployment': {}
          'f:sessionAffinity': {}
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-01-05T18:49:07Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:externalTrafficPolicy': {}
          'f:type': {}
  namespace: fhir
  labels:
    app: hapi
    app.kubernetes.io/component: hapi
    app.kubernetes.io/instance: hapi
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: hapi
  clusterIP: 172.30.37.54
  clusterIPs:
    - 172.30.37.54
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
